BUGIFX:  Table layout.
We have locked make the help-item table layout much more fixed in order to
prevent Bad Things from happening.  One consequence is that any any overspill
of suggestions is now simply chopped off.

--- a/commander.css
+++ b/commander.css
@@ -58,10 +58,10 @@ body {
         color:#fff
 }
 .help-entry {
-       display:table-cell;
-       padding-right:0.5em;
-       border:1px;
-       border-style:none dashed solid none;
-       border-color:#222;
-       color:#aaa
+        display:table-cell;
+        padding-right:0.5em;
+        border:1px;
+        border-style:none dashed solid none;
+        border-color:#222;
+        color:#aaa;
 }
